--- a/src/pages/partials/header.pug
+++ b/src/pages/partials/header.pug
@@ -17,5 +17,7 @@ mixin header()
       a(href="./scrawl-canvas.pug") Scrawl-canvas.js
       a(href="./threejs.pug") Three JS
       a(href="./dom.pug") DOM
+      a(href="./g.pug") G
+      a(href="./f2-g.pug") F2/G
 
     a.github(href="https://github.com/slaylines/canvas-engines-comparison" target="_blank") See on GitHub
